Timeout fix for Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: objective-c
 before_script:
 #  - "brew update"
   - "brew tap larsimmisch/avr"
-  - "brew install avr-libc"
-  - "brew install dfu-programmer"
+  - "brew install -v avr-libc"
+  - "brew install -v dfu-programmer"
 script: make
