--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: objective-c
 before_install:
   - brew update
-install:
   - brew tap larsimmisch/avr
   - brew install avr-binutils
   - brew install gmp
   - brew install libmpc
   - brew install mpfr
   - ruby .wrap.rb brew install avr-gcc
+  - brew install avr-libc
   - brew install dfu-programmer
 script: make
